update build for longer filenameswq

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_INIT([adwaita-blue], [3.22.21.0])
 
 AC_PREFIX_DEFAULT([/usr])
 AC_PROG_MKDIR_P
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([1.9 tar-pax])
 AC_CONFIG_FILES([Makefile gtk-3.0/Makefile gtk-2.0/Makefile])
 
 AC_OUTPUT
